FIX
Add unzip
Add pm2 running config select option